Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27505

Custom build steps are not added to the vcproj file when using QMAKE_EXTRA_COMPILERS and a single-configuration build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0 RC 2
    • 4.6.2
    • Build tools: qmake
    • None
    • Windows7 64bit, mkspec == win32-msvc2008,

    Description

      I have defined a custom tool to run shiboken and am using mkspec win32-msvc2008.
      If CONFIG contains "debug_and_release" then the custom build step is correctly included in the resulting vcproj file.
      However, if I am building a single-configuration vcproj file, the custom rule is not included in the generated vcproj file.

      Note that I have a patch file which fixes this under Qt 4.6.2 and will probably also work for the latest version of Qt. See attached for the patch file.

      Here is my custom tool rule:

      SHIBOKEN_RULE_FILE = shiboken.rule
      shiboken_rule.name = "Shiboken Custom Build Step..."
      shiboken_rule.input = SHIBOKEN_RULE_FILE
      shiboken_rule.output = mainwindow_wrapper.cpp
      shiboken_rule.commands = ...\shiboken
      shiboken_rule.commands += "--avoid-protected-hack"
      shiboken_rule.commands += "../data/global.h"
      shiboken_rule.commands += "--include-paths=../../HybridApp;$$QT_INC"
      shiboken_rule.commands += "--typesystem-paths=../data;$$QTTYPESYSTEM"
      shiboken_rule.commands += "--output-directory=.."
      shiboken_rule.commands += "../data/typesystem.xml"
      shiboken_rule.depends = "../data/typesystem.xml"
      shiboken_rule.depends += "../data/global.h"
      QMAKE_EXTRA_COMPILERS += shiboken_rule

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            mik wells Mik Wells
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes